# callbreak-np

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: README.md  main.rs
callbreak/: Cargo.toml  README.md
callbreak/src/: error.rs  game.rs  hand.rs  host.rs  lib.rs  message.rs  player.rs  playerview.rs  round.rs  trick.rs  turn.rs  view.rs
callbreak/src/agent/: bot.rs  human.rs  mod.rs  net.rs  view.rs
callbreak/src/deck/: card.rs  deck.rs  mod.rs  suit.rs
callbreak/src/game/: call.rs  game.rs  hand.rs  mod.rs  player.rs  round.rs  trick.rs  turn.rs
callbreak/src/game/deck/: card.rs  deck.rs  mod.rs  rank.rs  suit.rs
core/: Cargo.toml
core/src/: callbreak.rs  error.rs  hand.rs  lib.rs  player.rs  round.rs  trick.rs  turn.rs
deck/: Cargo.toml
deck/src/: card.rs  lib.rs  rank.rs  suit.rs
documentation/: definition.md
fe/: Cargo.toml  Dioxus.toml
fe/assets/: main.css  tailwind.css
fe/src/: main.rs  menu.rs
fe/src/local/: card_art.rs  mod.rs  session.rs  table.rs  view.rs
single-player-api/: Cargo.toml
single-player-api/src/: main.rs
