[package]
name = "api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
callbreak = {path="../callbreak/"}
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive", "rc"] }
rand = { version = "0.9.2", features = ["thread_rng"] }
futures = "0.3.31"
