[package]
name = "callbreak"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tungstenite = "0.28.0"

[dev-dependencies]
once_cell = "1.21.3"

[[bin]]
name = "poc"
path = "src/bin/poc.rs"
