[package]
name = "callbreak"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tracing = "0.1.41"

# Only the `poc` example needs a subscriber and a websocket server; keeping them
# out of the library's dependencies keeps them out of wasm consumers like `fe`.
[dev-dependencies]
once_cell = "1.21.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tungstenite = "0.28.0"
