[package]
name = "fe"
version = "0.1.0"
authors = ["Prasant Adhikari <pa1038@nyu.edu>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
callbreak = {path="../callbreak/"}
tungstenite = "0.28.0"
gloo-net = {version = "0.6.0", features = ["websocket"]}
futures = "0.3.31"
futures-util = "0.3.31"
wasm-bindgen-futures = "0.4.56"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
